listando todos os livros por categoria